--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -508,13 +508,13 @@ a:hover,
   font-size: 16px;
 }
 #header2-c H1 {
-  text-align: center;
+  text-align: left;
   color: #333333;
-  font-size: 72px;
+  font-size: 36px;
   font-family: 'Roboto Condensed', sans-serif;
 }
 #header2-c P {
-  text-align: center;
+  text-align: left;
   color: #000000;
   font-size: 16px;
 }
